Anna halfway through comments

--- a/abstract.tex
+++ b/abstract.tex
@@ -48,7 +48,7 @@ Using crime data from the third largest police force in England, serving a popul
 
 ``If England gets beaten, so will she'' - read the poster as part of the ``The Not-So-Beautiful-Game'' awareness campaign launched by the National Centre for Domestic Violence in the wake of the 2018 FIFA World Cup \autocite{NCDV}. While the link between sport events and domestic abuse has been the focus of a number of smaller studies\autocite{Williams2014}, large-scale quantitative investigations of this relationship are relatively scarce. The most extensive study in the topic found that an unexpected loss of the local National Football League (NFL) team resulted in a 10\% increase in the rate of reported male to female intimate partner violence (IPV) in the US\autocite{Card2011}. 
 
-In England, most studies have focused on the link between football (soccer) and domestic abuse. Football's history is inextricably linked to England, and it is by far the most popular sport in the country \autocite{Parry2014}, with the 2018 World Cup attracting record number of 44.5 million viewers\autocite{BBC}. One of the earliest examinations of the link between football and domestic abuse in England focused on the 2010 World Cup, using daily data from 33 out of 39 police forces in England for the period between June-July in 2009 and 2010. Using 2009, a non-tournament year, and non-match days during the tournament in 2010 as controls, they tested whether the number of reported cases increased significantly on England match days (of which there were four), depending on the result of the match (two draws, one win and one loss). The study found that rates of reported domestic abuse increased significantly when England lost or won (about 33-35\%), but did not change on days when they drew. 
+In England, most studies have focused on the link between football (soccer) and domestic abuse. Football's history is inextricably linked to England, and it is by far the most popular sport in the country \autocite{Parry2014}, with the 2018 World Cup attracting record number of 44.5 million viewers\autocite{BBC}. One of the earliest examinations of the link between football and domestic abuse in England focused on the 2010 World Cup, using daily data from 33 out of 39 police forces in England for the period between June-July in 2009 and 2010\autocite{Brimicombe2012}. Using 2009, a non-tournament year, and non-match days during the tournament in 2010 as controls, they tested whether the number of reported cases increased significantly on England match days (of which there were four), depending on the result of the match (two draws, one win and one loss). The study found that rates of reported domestic abuse increased significantly when England lost or won (about 33-35\%), but did not change on days when they drew. 
 
 A more comprehensive investigation, using daily counts of domestic abuse in Lancashire from the 2002, 2006 and 2010 World Cup, found a 38\% increase in the number of reported domestic violence cases when the England team lost, and a 26\% increase when they won or drew\autocite{Kirby2014}. These estimates had been widely discussed in the British media before the 2018 World Cup, and the figures were also quoted on the posters in the Not-so Beautiful Game Campaign. While domestic abuse is predominantly understood as a pattern of ongoing behaviour involving a series of occurrences, rather than a one-off incident triggered by football \autocite{Brooks-Hay2018}, these studies, and other qualitative investigations\autocite{Swallow} nevertheless suggest that national football tournaments can create an environment for abusers that is conducive to domestic abuse.
 
@@ -98,7 +98,7 @@ Alcohol & $-$0.719$^{***}$ & $-$0.719$^{***}$ & $-$0.719$^{***}$ & $-$0.862$^{**
   &  & (0.069) & (0.091) & (0.063) \\ 
   England draw &  & 0.025 & 0.048 & 0.047 \\ 
   &  & (0.082) & (0.104) & (0.072) \\ 
-  England lost &  & 0.078 & $-$0.013 & 0.050 \\ 
+  England loss &  & 0.078 & $-$0.013 & 0.050 \\ 
   &  & (0.068) & (0.089) & (0.061) \\ 
   After England &  & 0.097$^{**}$ & 0.075 & 0.086$^{**}$ \\ 
   &  & (0.043) & (0.055) & (0.038) \\ 
@@ -108,7 +108,7 @@ Alcohol & $-$0.719$^{***}$ & $-$0.719$^{***}$ & $-$0.719$^{***}$ & $-$0.862$^{**
   &  &  & (0.135) & (0.101) \\ 
   England draw:Alcohol &  &  & $-$0.055 & $-$0.034 \\ 
   &  &  & (0.165) & (0.129) \\ 
-  England lost:Alcohol &  &  & 0.223 & 0.076 \\ 
+  England loss:Alcohol &  &  & 0.223 & 0.076 \\ 
   &  &  & (0.135) & (0.101) \\ 
   After England:Alcohol &  &  & 0.051 & 0.037 \\ 
   &  &  & (0.084) & (0.066) \\ 
@@ -162,7 +162,7 @@ Table \ref{gender_regression} shows the results from four negative binomial regr
   & (0.165) & (0.066) & (0.193) & (0.135) \\ 
   England draw & 0.080 & 0.038 & 0.043 & 0.107 \\ 
   & (0.194) & (0.076) & (0.225) & (0.169) \\ 
-  England lost & $-$0.063 & 0.065 & $-$0.036 & 0.117 \\ 
+  England loss & $-$0.063 & 0.065 & $-$0.036 & 0.117 \\ 
   & (0.162) & (0.064) & (0.171) & (0.136) \\ 
   After England & $-$0.036 & 0.093$^{**}$ & 0.152$^{*}$ & 0.025 \\ 
   & (0.103) & (0.040) & (0.114) & (0.082) \\ 
@@ -172,7 +172,7 @@ Table \ref{gender_regression} shows the results from four negative binomial regr
   & (0.285) & (0.108) & (0.358) & (0.231) \\ 
   Alcohol:England draw & $-$0.282 & 0.031 & 0.071 & $-$0.580 \\ 
   & (0.411) & (0.138) & (0.629) & (0.313) \\ 
-  Alcohol:England lost & 0.286 & 0.028 & 0.328 & $-$0.088 \\ 
+  Alcohol:England loss & 0.286 & 0.028 & 0.328 & $-$0.088 \\ 
   & (0.279) & (0.111) & (0.356) & (0.231) \\ 
   Alcohol:After England & 0.209 & 0.052 & $-$0.111 & $-$0.040 \\ 
   & (0.185) & (0.071) & (0.242) & (0.159) \\ 
@@ -219,7 +219,7 @@ Our unique dataset further allows us to explore whether England games have simil
   & (0.074) & (0.095) & (0.136) & (0.077) \\ 
   England draw & 0.100 & $-$0.065 & $-$0.066 & 0.035 \\ 
   & (0.085) & (0.128) & (0.168) & (0.092) \\ 
-  England lost & $-$0.042 & 0.075 & 0.011 & 0.089 \\ 
+  England loss & $-$0.042 & 0.075 & 0.011 & 0.089 \\ 
   & (0.078) & (0.100) & (0.139) & (0.078) \\ 
   After England & 0.052 & 0.161$^{**}$ & 0.141 & 0.108$^{**}$ \\ 
   & (0.047) & (0.062) & (0.084) & (0.048) \\ 
@@ -229,7 +229,7 @@ Our unique dataset further allows us to explore whether England games have simil
   & (0.219) & (0.256) & (0.359) & (0.132) \\ 
   Alcohol:England draw & 0.060 & 0.374 & 0.393 & 0.360$^{*}$ \\ 
   & (0.264) & (0.303) & (0.431) & (0.161) \\ 
-  Alcohol:England lost & 0.144 & 0.456$^{*}$ & $-$0.032 & 0.018 \\ 
+  Alcohol:England loss & 0.144 & 0.456$^{*}$ & $-$0.032 & 0.018 \\ 
   & (0.226) & (0.228) & (0.393) & (0.138) \\ 
   Alcohol:After England & 0.094 & 0.127 & 0.446$^{*}$ & 0.053 \\ 
   & (0.144) & (0.158) & (0.211) & (0.088) \\ 
@@ -262,32 +262,31 @@ Next, we explore the temporal dynamics of the increase in alcohol-related domest
  \caption{The temporal dynamics of the football-induced increase in domestic abuse, by alcohol involvement}
 \includegraphics[width=0.75\textwidth]{Threehours.pdf}
 \label{fig:threehours}
-		\floatfoot{Note: Estimates are from two separate negative binomial regressions (based on tests of overdispersion) with year, month, day of week, three-hour period of day, Christmas, New Year's eve controls \NS{Y axis need a better label. Perhaps we can transform onto the response scale and plot marginal effects and label it ``Number of cases'' or perhaps we can have it on the exp scale and say ``Increase in domestic abuse (\%)'' and multiply by 100 and relabel 100 as 0\%? Legend ``Alcohol'' to ``Alcohol involved''? YOUR BEAUTIFUL FIGURE DISAPPEARED WHEN I RECOMPILED. wrong figure PDF on github?}}
+		\floatfoot{Note: Estimates are from two separate negative binomial regressions (based on tests of overdispersion) with year, month, day of week, three-hour period of day, Christmas, New Year's eve controls}
 \end{figure}
 
 \newpage
 
 \section{Discussion}
 
-When England play football, there is a 60\% increase in reported alcohol-related domestic abuse. This is a large increase, and translates into a 0.42 increase in the daily rate of cases per 100,000 of the population against a base rate \NS{X} cases per 100,000. \NS{We are not allowed, by NHB, to make claims about being the ``first'' etc. So I deleted this.} The increase is entirely limited to alcohol-related abuse, even though alcohol-related domestic abuse cases are only 23\% of all domestic abuse. As such, we see this as strong quantitative evidence that alcohol plays an instrumental role in the relationship between football and domestic abuse in England. The effect is also exclusively limited to male-perpetrated domestic abuse, implicating masculinity as the pathway by which football increases abuse.
+When the England football team wins in national football tournament, there is a 61\% increase in reported alcohol-related domestic abuse. This is a large increase, translating into a 0.43 increase in the daily rate of alcohol-related cases per 100,000 individuals against a base rate 0.71 cases per 100,000. This effect is entirely limited to alcohol-related abuse, even though alcohol-related domestic abuse cases are only 23\% of all domestic abuse in our dataset. As such, we see this as strong quantitative evidence that alcohol plays an instrumental role in the relationship between football and domestic abuse in England. The effect is also exclusively limited to male-perpetrated domestic abuse, implicating masculinity and alcohol consumption as the pathway by which football increases abuse.
 
-Our findings show both similarities and differences with results from previous quantitative investigations. Replicating a previous US study, we found that it is male to female abuse that is affected by a sporting event\autocite{Card2011}. In the US study, the effect of the match did not depend on alcohol-involvement in the abuse case, and the increase was driven by unexpected losses. In contast, we find that victory that results in the largest increase, and that alcohol involvement is critical. This discrepancy most likely stems from the contextual differences between the two studies (England, football, national tournaments vs. US, American football, NFL matches), highlighting that the effect of sports-induced emotional cues on domestic abuse is sensitive to the cultural context. 
+Our findings show both similarities and differences with results from previous quantitative investigations. Replicating the results of a previous US study, we found that it is male to female abuse that is affected by a sporting event\autocite{Card2011}. In the same study, the effect of the match did not depend on alcohol-involvement in the abuse case, and the increase was driven by unexpected losses. In contrast, we find that in the context of England and football, it is a victory that results in the largest increase, and that alcohol involvement is critical. This discrepancy most likely stems from the contextual differences between the two studies (England, football, national tournaments vs. US, American football, NFL matches), highlighting that the effect of sports-induced emotional cues on domestic abuse is highly sensitive to the cultural context. 
 
-Based on the pre-match betting odds, in our dataset all of the England victories were expected. Perhaps it is living up to the hopes of the fans that has the largest emotional effect, \NS{Not sure about this next bit} and perhaps results in increased alcohol consumption\autocite{Davies2018}. Indeed, English newspapers' narratives about the team's performance in these tournaments are characterised with high levels of optimism, expectation and yearning for the glory of the 1966 World Cup\autocite{Vincent2010}. Previous research has demonstrated how the vicarious experience of watching their team play can increase supporter's testosterone and cortisol levels, even when they expect their team to win, suggested to be an adaptive response to the perceived threat to one's social identity\autocite{VanderMeij2012}.
+Based on the pre-match betting odds, all of the England victories were expected in our dataset. This suggests that in the context of England's participation in national football tournaments, it is living up to the expectations of the fans that results in largest emotional effect. Indeed, English newspapers' narratives about the team's performance in these tournaments are characterised with high levels of optimism, expectation and yearning for the glory of the 1966 World Cup\autocite{Vincent2010}. Previous research has demonstrated how the vicarious experience of watching their team play can increase supporter's testosterone and cortisol levels, even when they expect their team to win, suggested to be an adaptive response to the perceived threat to one's social identity\autocite{VanderMeij2012}. Anecdotal evidence suggests that alcohol consumption increases following an England victory\autocite{Davies2018}, consistent with our findings.
 
-%In the context of the World Cup, previous research has reported elevated testosterone levels amongst the winning team's supporters\autocite{Bernhardt1998}.
 
-The largest \NS{We are larger though? Much bigger time span and much bigger population? So...} 
+The most widely-dicussed England-based investigation of the link between football and domestic abuse have found that an England loss results in the most pronounced increase (38\%) in domestic abuse, and a win or draw have a slightly smaller effect (26\%)\autocite{Kirby2014}. This study used daily data on IPV from Lancashire Constabulary (serving a population of 1.4 million, about half the population of the West Midlands county) for the period of the 2002, 2004 and 2010 World Cup tournaments (June-July). 
+Using daily domestic abuse data from the West Midlands for the period between 2010 and 2018, we find a different pattern, with the largest increase when England wins for alcohol-involved cases of abuse, but no comparable effects for an England loss. Upon re-analysing their data by treating wins and draws as two separate variables (resulting in an improved model fit, see Table \ref{kirbyrep1} in the Appendix), we see a roughly similar effect for wins (45\%, 95\% CI [28\%--64\%]) and losses (39\%, 95\% CI [18\%--64\%]), and no effect when England draws. Our reanalysis replicates the win effect seen in the current data in the earlier sample, though the absence of a loss effect remains a stark difference between the two studies. While our data is from a different geographical area and time period, the discrepancy is still puzzling. \AT{Hopefully I managed to emphasize that our study is way more comprehensive \& sell our results a bit better}
 
-An earlier England-based study found that an England loss results in a increase (38\%) in domestic abuse, and a win or draw have a slightly smaller effect (26\%)\autocite{Kirby2014}. We find a different pattern, with the largest increase when England wins for alcohol-involved cases of abuse, but no comparable effects for an England loss. Upon re-analysing their data by treating wins and draws as two separate variables (resulting in an improved model fit, see Table \ref{kirbyrep1} in the Appendix), we see a roughly similar effect for wins (45\%, 95\% CI [28--64]) and losses (39\%, 95\% CI [18--64]), and no effect when England draws. Our reanalysis replicates the win effect seen in the current data in the earlier sample, though the absence of a loss effect remains a stark difference between the two studies. While our study is different in a few aspects (West Midlands 2010-2018 vs Lancashire, 2002, 2006, 2010), the discrepancy is still puzzling. \NS{Don't need this? ``given that these are \textit{national} football tournament matches''}.
 
-\NS{We have variables``England win'' and ``England lost'' as variable names. Tenses differ? So maybe ``England win'' and ``England loss'' instead?}
+To explore the underlying reason for this discrepancy and test the robustness of our results, we find it instructive to break our analysis into specific tournament years for the two datasets (see Table \ref{kirbyrep2} in the Appendix). An interesting common pattern in both datasets is the large effect of England's victory over Slovenia in the group stage of the 2010 World Cup, which, after much anticipation, secured their progression to the next stage of the tournament. Equally, the subsequent loss against Germany in the knockout stage resulted in a substantial increase in the number of reported domestic abuse incidents, which is the only tournament in our dataset where this pattern appears. Interestingly, an earlier examination of the 2010 World Cup found a similar pattern, using daily data from 33 out of 39 police forces in England\autocite{Brimicombe2012}.
 
-To explore the underlying reason for this discrepancy and test the robustness of our results, we find it instructive to break our analysis into specific tournament years for the two datasets (see Table \ref{kirbyrep2} in the Appendix). An interesting common pattern in both datasets is the large effect of England's victory over Slovenia in the group stage of the 2010 World Cup, which, after much anticipation, secured their progression to the next stage of the tournament. Equally, the subsequent loss against Germany in the knockout stage resulted in a substantial increase in the number of reported domestic abuse incidents, which is the only tournament in our dataset where this pattern appears. While the effect of a victory or loss is likely to be highly specific to the context of a particular match (e.g., group stage or knockout stage, previous performance of the team, weather on the day, etc.), the estimated effect of an England victory on the number of reported domestic abuse cases is robust to different model specifications (see Table \ref{specifications}), using data from a different geographical area (see Table \ref{kirbyrep2} in the Appendix), and the exclusion of specific tournament years (see Table \ref{robustness} in the Appendix). \TM{Do we also want to emphasize the differnce in sample size, and representativeness between west mids and Lancashire?} \NS{Yes. Our case numbers must be much higher?}\NS{Puzzled by the number of observations in the table A3---30ish vs 730ish? Better to call it ``Observation days'' to avoid confusing total number of days with total number of cases of abuse?}
 
+While the effect of a victory or loss is likely to be highly specific to the context of a particular match (e.g., group stage or knockout stage, previous performance of the team, weather on the day, etc.), the estimated effect of an England victory on the number of reported domestic abuse cases is robust to different model specifications (see Table \ref{specifications}), using data from a different geographical area (see Table \ref{kirbyrep2} in the Appendix), and the exclusion of specific tournament years (see Table \ref{robustness} in the Appendix). 
 
 Does this effect generalise to other sporting events, or is it specific to football?
-It has been suggested previously that popular sports, such as rugby have similar links with domestic abuse\autocite{Brooks-Hay2018}. Focusing on the Six Nations, a high-profile rugby tournament that takes place every year with the participation of England, Wales, Scotland, Ireland, France and Italy, we explored whether the reported number of domestic abuse cases increase on days when the England national rugby team plays. Since the Six Nations takes place every year with 15 matches for each team as opposed to the World Cup and the European Championship, which are relatively rare, we have many more days when England lost or won. The results show no comparable effects for rugby matches (see Table \ref{rugby} in the Appendix), which might stem from differences in media coverage and audience numbers between the two tournaments.  \TM{Is it worth including a citation that Rugby is the second most watched sport after football? American reviewers may never have heard of it and assume it is too niche.} \NS{Yes. Also, is column 1 in Table A5 a repetition from an earlier table. I think we can't repeat the same regression twice.}
+It has been previously suggested that other popular sports, such as rugby have similar links with domestic abuse\autocite{Brooks-Hay2018}. Following football, rugby is the second most popular sport in England\autocite{Ipsos2003}. Focusing on the Six Nations, a high-profile rugby tournament that takes place every year with the participation of England, Wales, Scotland, Ireland, France and Italy, we explored whether the reported number of domestic abuse cases increase on days when the England national rugby team plays. Since the Six Nations takes place every year with 15 matches for each team as opposed to the World Cup and the European Championship, which are relatively rare, we have many more days when England lost or won. The results show no comparable effects for rugby matches (see Table \ref{rugby} in the Appendix), potentially stemming from differences in media coverage and audience numbers between the two tournaments. 
 
 We also investigated whether similar patterns are also present in other types of crimes, which are similar to domestic abuse in nature, \NS{involving elements of one individual controlling another---not sure if this is a key feature in the abuse literature, I recall it is an element in rape?}. Specifically, we explored how England's participation in national football tournaments affects alcohol and non-alcohol related reported sexual offences and other types of abuse (child abuse, vulnerable adult abuse). There is no effect on the number of reported sexual offences, and a slight increase in the number of reported other cases when the tournament is on (see Table \ref{otherabuse} in the Appendix). \NS{Inference from the null! Actually we have a poorly estimated zero effect, which could be as big as, say, 0.191 +- 1.96ish*0.462, which means we can't rule out even quite big positive or negative effects.}
 
@@ -354,7 +353,7 @@ Our dataset comprises all crimes and specific types of incidents (such as domest
   & (0.082) & (0.067) & (0.111) & (0.112) \\ 
   England draw & 0.089 & 0.012 & 0.115 & 0.042 \\ 
   & (0.094) & (0.078) & (0.139) & (0.132) \\ 
-  England lost & 0.018 & 0.028 & 0.088 & 0.118 \\ 
+  England loss & 0.018 & 0.028 & 0.088 & 0.118 \\ 
   & (0.082) & (0.066) & (0.114) & (0.108) \\ 
   After England & 0.085 & 0.070 & 0.181$^{**}$ & 0.149$^{**}$ \\ 
   & (0.050) & (0.042) & (0.071) & (0.067) \\ 
@@ -364,12 +363,12 @@ Our dataset comprises all crimes and specific types of incidents (such as domest
   & (0.158) & (0.109) & (0.251) & (0.199) \\ 
   Alcohol:England draw & 0.071 & 0.102 & 0.127 & $-$0.337 \\ 
   & (0.192) & (0.137) & (0.361) & (0.254) \\ 
-  Alcohol:England lost & 0.296$^{*}$ & 0.057 & $-$0.023 & 0.027 \\ 
+  Alcohol:England loss & 0.296$^{*}$ & 0.057 & $-$0.023 & 0.027 \\ 
   & (0.153) & (0.112) & (0.237) & (0.207) \\ 
   Alcohol:After England & 0.208$^{*}$ & 0.053 & $-$0.119 & $-$0.158 \\ 
   & (0.100) & (0.072) & (0.163) & (0.136) \\ 
  \hline \\[-1.8ex] 
-Observations & 6,034 & 6,034 & 6,034 & 6,034 \\ 
+Number of days & 3,017 & 3,017 & 3,017 & 3,017 \\ 
 %Log Likelihood & $-$17,204.240 & $-$21,360.820 & $-$13,708.300 & $-$14,378.320 \\ 
 %$\theta$ & 44.231$^{***}$  (2.800) & 43.449$^{***}$  (1.546) & 24.998$^{***}$  (1.919) & 35.978$^{***}$  (3.376) \\ 
 %Akaike Inf. Crit. & 34,540.480 & 42,853.640 & 27,548.590 & 28,888.630 \\ 
@@ -407,12 +406,12 @@ Observations & 6,034 & 6,034 & 6,034 & 6,034 \\
   &  & (0.064) \\ 
   England draw &  & 0.032 \\ 
   &  & (0.073) \\ 
-  England lost & 0.382$^{***}$ & 0.388$^{***}$ \\ 
+  England loss & 0.382$^{***}$ & 0.388$^{***}$ \\ 
   & (0.094) & (0.085) \\ 
   After England & 0.111$^{**}$ & 0.113$^{**}$ \\ 
   & (0.051) & (0.047) \\ 
  \hline \\[-1.8ex] 
-Observations & 92 & 92 \\ 
+Number of days & 92 & 92 \\ 
 AIC & 714.980 & 704.356 \\ 
 %BIC & 747.763 & 739.662 \\ 
 %\hline 
@@ -451,7 +450,7 @@ AIC & 714.980 & 704.356 \\
   & (0.152) & (0.077) & (0.114) & (0.155) & (0.175) &  & (0.151) & (0.077) \\ 
   England draw & 0.100 & 0.098 & $-$0.137 & $-$0.029 & 0.324 & $-$0.077 & $-$0.021 &  \\ 
   & (0.150) & (0.156) & (0.095) & (0.112) & (0.204) & (0.173) & (0.108) &  \\ 
-  England lost & 0.200 & 0.373$^{***}$ & 0.568$^{***}$ & 0.174 & $-$0.127 & $-$0.042 & $-$0.155 & 0.066 \\ 
+  England loss & 0.200 & 0.373$^{***}$ & 0.568$^{***}$ & 0.174 & $-$0.127 & $-$0.042 & $-$0.155 & 0.066 \\ 
   & (0.232) & (0.117) & (0.106) & (0.140) & (0.212) & (0.124) & (0.154) & (0.088) \\ 
   After England & 0.253$^{**}$ & 0.122$^{*}$ & 0.024 & 0.070 & $-$0.008 & 0.007 & 0.038 & 0.140$^{**}$ \\ 
   & (0.101) & (0.070) & (0.065) & (0.082) & (0.125) & (0.103) & (0.081) & (0.060) \\ 
@@ -463,12 +462,12 @@ AIC & 714.980 & 704.356 \\
   &  &  &  & (0.277) & (0.314) &  & (0.257) & (0.123) \\ 
   England draw:AlcoholYes &  &  &  & 0.078 & $-$0.581 & 0.089 & 0.129 &  \\ 
   &  &  &  & (0.246) & (0.571) & (0.307) & (0.180) &  \\ 
-  England lost:AlcoholYes &  &  &  & 0.748$^{**}$ & 0.301 & 0.048 & $-$0.289 & 0.160 \\ 
+  England loss:AlcoholYes &  &  &  & 0.748$^{**}$ & 0.301 & 0.048 & $-$0.289 & 0.160 \\ 
   &  &  &  & (0.259) & (0.372) & (0.206) & (0.322) & (0.149) \\ 
   After England:AlcoholYes &  &  &  & 0.128 & $-$0.072 & 0.068 & $-$0.112 & 0.188$^{*}$ \\ 
   &  &  &  & (0.183) & (0.254) & (0.171) & (0.144) & (0.102) \\ 
  \hline \\[-1.8ex] 
-Observations & 30 & 32 & 30 & 730 & 732 & 730 & 732 & 618 \\ 
+Number of days & 30 & 32 & 30 & 730 & 732 & 730 & 732 & 618 \\ 
 %Log Likelihood & $-$112.494 & $-$101.847 & $-$107.268 & $-$2,315.879 & $-$2,259.612 & $-$2,604.474 & $-$2,614.295 & $-$2,237.868 \\ 
 %$\theta$ & 57.581$^{*}$  (31.978) &  &  & 136.319$^{***}$  (31.759) & 55.994$^{***}$  (9.013) & 68.164$^{***}$  (8.225) & 109.262$^{***}$  (16.375) & 90.905$^{***}$  (12.959) \\ 
 %Akaike Inf. Crit. & 246.989 & 225.694 & 236.536 & 4,731.757 & 4,619.224 & 5,304.947 & 5,328.590 & 4,563.737 \\ 
@@ -510,7 +509,7 @@ Observations & 30 & 32 & 30 & 730 & 732 & 730 & 732 & 618 \\
   & (0.097) & (0.068) & (0.062) & (0.066) & (0.067) \\ 
   England draw & 0.038 & 0.077 & 0.057 & 0.004 & 0.046 \\ 
   & (0.072) & (0.091) & (0.078) & (0.075) & (0.088) \\ 
-  England lost & 0.030 & 0.066 & 0.053 & 0.054 & 0.013 \\ 
+  England loss & 0.030 & 0.066 & 0.053 & 0.054 & 0.013 \\ 
   & (0.079) & (0.065) & (0.069) & (0.062) & (0.065) \\ 
   After England & 0.057 & 0.080$^{*}$ & 0.088$^{**}$ & 0.099$^{**}$ & 0.071$^{*}$ \\ 
   & (0.048) & (0.042) & (0.040) & (0.039) & (0.042) \\ 
@@ -520,12 +519,12 @@ Observations & 30 & 32 & 30 & 730 & 732 & 730 & 732 & 618 \\
   & (0.163) & (0.109) & (0.100) & (0.105) & (0.107) \\ 
   Alcohol:England draw & $-$0.046 & $-$0.141 & $-$0.048 & 0.055 & $-$0.017 \\ 
   & (0.130) & (0.179) & (0.141) & (0.131) & (0.151) \\ 
-  Alcohol:England lost & 0.014 & 0.139 & 0.131 & 0.078 & 0.039 \\ 
+  Alcohol:England loss & 0.014 & 0.139 & 0.131 & 0.078 & 0.039 \\ 
   & (0.134) & (0.107) & (0.116) & (0.103) & (0.109) \\ 
   Alcohol:After England & $-$0.065 & 0.096 & 0.050 & 0.054 & 0.050 \\ 
   & (0.086) & (0.073) & (0.071) & (0.067) & (0.071) \\ 
  \hline \\[-1.8ex] 
-Observations & 5,416 & 5,302 & 5,304 & 5,302 & 5,304 \\ 
+Number of days & 5,416 & 5,302 & 5,304 & 5,302 & 5,304 \\ 
 %Log Likelihood & $-$18,626.890 & $-$18,243.850 & $-$18,269.330 & $-$18,506.890 & $-$18,533.610 \\ 
 %$\theta$ & 60.431$^{***}$  (2.862) & 58.624$^{***}$  (2.761) & 62.319$^{***}$  (3.016) & 67.975$^{***}$  (3.245) & 59.902$^{***}$  (2.752) \\ 
 %Akaike Inf. Crit. & 37,381.780 & 36,615.700 & 36,666.660 & 37,141.780 & 37,195.210 \\ 
@@ -549,50 +548,42 @@ Observations & 5,416 & 5,302 & 5,304 & 5,302 & 5,304 \\
 \centering
  \scalebox{0.85}{
   \begin{threeparttable}
- \caption{Football vs Rugby}
+ \caption{The effect of England rugby matches on domestic abuse}
   \label{rugby}
- \begin{tabular}{@{\extracolsep{5pt}}lcc} 
+\begin{tabular}{@{\extracolsep{5pt}}lc} 
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
- & \multicolumn{2}{c}{\textit{Dependent variable:}} \\ 
- & \multicolumn{2}{c}{Number of domestic abuse cases per day} \\ 
-\cline{2-3} 
-\\
-%\\[-1.8ex] & \multicolumn{2}{c}{Domestic\_Abuse} \\ 
- & Football & Rugby \\ 
-\\[-1.8ex] & (1) & (2)\\ 
+ & \multicolumn{1}{c}{\textit{Dependent variable:}} \\ 
+\cline{2-2} 
+\\[-1.8ex] & Number of reported domestic abuse cases per day \\ 
 \hline \\[-1.8ex] 
-% Alcohol & $-$0.862$^{***}$ & $-$0.862$^{***}$ \\ 
-%  & (0.031) & (0.031) \\ 
-  Tournament on & 0.032 & 0.005 \\ 
-  & (0.020) & (0.019) \\ 
-  England win & $-$0.031 & 0.0001 \\ 
-  & (0.063) & (0.035) \\ 
-  England draw & 0.047 &  \\ 
-  & (0.072) &  \\ 
-  England lost & 0.050 & 0.056 \\ 
-  & (0.061) & (0.055) \\ 
-  After England & 0.086$^{**}$ & $-$0.010 \\ 
-  & (0.038) & (0.031) \\ 
-  Alcohol:Tournament on & $-$0.083$^{**}$ & $-$0.047 \\ 
-  & (0.035) & (0.035) \\ 
-  Alcohol:England win & 0.606$^{***}$ & 0.045 \\ 
-  & (0.101) & (0.059) \\ 
-  Alcohol:England draw & $-$0.034 &  \\ 
-  & (0.129) &  \\ 
-  Alcohol:England lost & 0.076 & $-$0.073 \\ 
-  & (0.101) & (0.091) \\ 
-  Alcohol:After England & 0.037 & $-$0.021 \\ 
-  & (0.066) & (0.055) \\ 
+% Alcohol & $-$0.862$^{***}$ \\ 
+%  & (0.031) \\ 
+  Tournament on & 0.005 \\ 
+  & (0.019) \\ 
+  England win & 0.0001 \\ 
+  & (0.035) \\ 
+  England loss & 0.056 \\ 
+  & (0.055) \\ 
+  After England & $-$0.010 \\ 
+  & (0.031) \\ 
+  Alcohol:Tournament on & $-$0.047 \\ 
+  & (0.035) \\ 
+  Alcohol:England win & 0.045 \\ 
+  & (0.059) \\ 
+  Alcohol:England loss & $-$0.073 \\ 
+  & (0.091) \\ 
+  Alcohol:After England & $-$0.021 \\ 
+  & (0.055) \\ 
  \hline \\[-1.8ex] 
-Observations & 6,034 & 6,034 \\ 
-%Log Likelihood & $-$20,913.640 & $-$20,935.710 \\ 
-%$\theta$ & 60.939$^{***}$  (2.692) & 60.091$^{***}$  (2.639) \\ 
-%Akaike Inf. Crit. & 41,959.280 & 41,999.420 \\ 
-\hline 
+Number of days & 3,017 \\ 
+%Log Likelihood & $-$20,935.710 \\ 
+%$\theta$ & 60.091$^{***}$  (2.639) \\ 
+%Akaike Inf. Crit. & 41,999.420 \\ 
+%\hline 
 \hline \\[-1.8ex] 
-%\textit{Note:}  & \multicolumn{2}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
-\end{tabular}
+%\textit{Note:}  & \multicolumn{1}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
+\end{tabular} 
 \begin{tablenotes}
       \item[a] \textit{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01}
       \item[b] \textit{Estimates are from a series of negative binomial regressions (based on tests of overdispersion)  with year, month, day of week, Christmas, New Year's eve controls interacted by alcohol; there was only one England rugby match that resulted in a draw between 2010 and 2018, therefore we excluded it from the data; standard errors in parentheses}
@@ -629,7 +620,7 @@ Observations & 6,034 & 6,034 \\
   & (0.217) & (0.132) \\ 
   England draw & $-$0.062 & 0.175 \\ 
   & (0.253) & (0.148) \\ 
-  England lost & $-$0.220 & 0.153 \\ 
+  England loss & $-$0.220 & 0.153 \\ 
   & (0.223) & (0.132) \\ 
   After England & $-$0.035 & 0.095 \\ 
   & (0.134) & (0.081) \\ 
@@ -639,7 +630,7 @@ Observations & 6,034 & 6,034 \\
   & (0.462) & (0.274) \\ 
   Alcohol:England draw & 0.781 & $-$0.252 \\ 
   & (0.503) & (0.346) \\ 
-  Alcohol:England lost & 0.011 & $-$0.111 \\ 
+  Alcohol:England loss & 0.011 & $-$0.111 \\ 
   & (0.483) & (0.285) \\ 
   Alcohol:After England & 0.114 & $-$0.172 \\ 
   & (0.287) & (0.182) \\ 
@@ -688,7 +679,7 @@ Observations & 6,034 & 6,034 \\
   & (0.089) & (0.110) & (0.101) \\ 
   England draw & 0.082 & 0.014 & 0.119 \\ 
   & (0.121) & (0.138) & (0.117) \\ 
-  England lost & $-$0.099 & 0.337$^{***}$ & 0.265$^{***}$ \\ 
+  England loss & $-$0.099 & 0.337$^{***}$ & 0.265$^{***}$ \\ 
   & (0.086) & (0.099) & (0.093) \\ 
   After England & 0.035 & 0.070 & 0.049 \\ 
   & (0.056) & (0.068) & (0.062) \\ 
@@ -698,7 +689,7 @@ Observations & 6,034 & 6,034 \\
   & (0.156) & (0.196) & (0.165) \\ 
   Alcohol:England draw & $-$0.151 & $-$0.016 & $-$0.209 \\ 
   & (0.233) & (0.306) & (0.237) \\ 
-  Alcohol:England lost & 0.221 & 0.044 & $-$0.413$^{**}$ \\ 
+  Alcohol:England loss & 0.221 & 0.044 & $-$0.413$^{**}$ \\ 
   & (0.171) & (0.198) & (0.182) \\ 
   Alcohol:After England & $-$0.036 & 0.042 & $-$0.122 \\ 
   & (0.108) & (0.143) & (0.118) \\ 
@@ -738,7 +729,7 @@ Observations & 251,976 & 279,777 & 279,777 \\
   & (0.082) & (0.095) & (0.162) \\ 
   England draw & $-$0.017 & $-$0.111 & 0.034 \\ 
   & (0.096) & (0.105) & (0.208) \\ 
-  England lost & $-$0.163$^{*}$ & $-$0.104 & $-$0.560$^{***}$ \\ 
+  England loss & $-$0.163$^{*}$ & $-$0.104 & $-$0.560$^{***}$ \\ 
   & (0.087) & (0.087) & (0.170) \\ 
   After England & 0.052 & $-$0.139$^{**}$ & $-$0.243$^{**}$ \\ 
   & (0.054) & (0.055) & (0.108) \\ 
@@ -748,7 +739,7 @@ Observations & 251,976 & 279,777 & 279,777 \\
   & (0.146) & (0.159) & (0.450) \\ 
   Alcohol:England draw & $-$0.266 & $-$0.116 & $-$0.935$^{**}$ \\ 
   & (0.231) & (0.208) & (0.390) \\ 
-  Alcohol:England lost & 0.277$^{*}$ & 0.114 & 0.552 \\ 
+  Alcohol:England loss & 0.277$^{*}$ & 0.114 & 0.552 \\ 
   & (0.159) & (0.166) & (0.654) \\ 
   Alcohol:After England & $-$0.104 & 0.147 & $-$0.265 \\ 
   & (0.106) & (0.102) & (0.297) \\ 
@@ -789,7 +780,7 @@ Observations & 95,091 & 95,091 & 272,793 \\
   & (0.157) \\ 
   England draw & 0.368$^{*}$ \\ 
   & (0.201) \\ 
-  England lost & $-$0.113 \\ 
+  England loss & $-$0.113 \\ 
   & (0.180) \\ 
   After England & 0.041 \\ 
   & (0.114) \\ 
