Anna halfway through comments

--- a/football_refs.bib
+++ b/football_refs.bib
@@ -1,3 +1,9 @@
+@misc{Ipsos2003,
+author = {{Ipsos MORI}},
+title = {{Rugby Union 'Britain's Second Most Popular Sport'}},
+url = {https://www.ipsos.com/ipsos-mori/en-uk/rugby-union-britains-second-most-popular-sport},
+urldate = {2019-04-12}
+}
 @article{Vincent2010,
 abstract = {The essence of global sports has been competition among nations at the international level. For football, arguably the world's most popular sport, global rivalries are paramount, and every four years since 1930, it has been the World Cup that has provided this excitement. English newspaper narratives about the English men's national football team competing in the 2006 World Cup were examined to gain insight into how English national identity was portrayed. Using a qualitative textual analysis methodology, this study drew on Anderson's (1983) theory of the imagined community, Hobsbawm's (1983) notion of invented traditions, and the Eliasian (1991) concept of habitus codes. Set against the contemporary trends of devolution, globalization, and a post-7/7 discourse the newspapers relied on a reductionist, essentialist construction to elicit an emotional connection with a homogenous form of English national identity. The narratives seemed designed to galvanize support for the English team through references to...},
 author = {Vincent, John and Kian, Edward M. and Pedersen, Paul M. and Kuntz, Aaron and Hill, John S.},
